infra/envoy/envoy.yml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                
                stat_prefix: ingress_http

                # 🔥 CRITICAL FIX
                codec_type: AUTO
                stream_idle_timeout: 0s

                common_http_protocol_options:
                  idle_timeout: 0s

                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: adapter_cluster
                            timeout: 0s

                http_filters:
                  - name: envoy.filters.http.router

  clusters:
    - name: adapter_cluster
      connect_timeout: 2s
      type: LOGICAL_DNS
      lb_policy: ROUND_ROBIN

      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http_protocol_options: {}

      load_assignment:
        cluster_name: adapter_cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: host.docker.internal
                      port_value: 3000
